# bridgefu

./: .dockerignore  .gitignore  BENCHMARKS.md  Cargo.toml  Dockerfile  Makefile  PRD.md  README.md  compose.yaml  deploy.sh
.github/workflows/: ci.yml  moq-upstream-watch.yml
config/: bridgefu.example.yaml  schema.json
deploy/: Dockerfile  bridgefu.service
deploy/terraform/: README.md
deploy/terraform/aws/: main.tf  variables.tf  versions.tf
deploy/terraform/gcp/: main.tf  versions.tf
docs/: amazon-connect.md  architecture.md  migration-v1.md  moq-browser-interop.md  moq-compatibility.json  moq-fork-review.md  moq-independent-interop.md  moq-packet-capture.md  protocol-compatibility.md  provider-capabilities.md  repository-backends.md  roadmap.md  security.md
migrations/postgres/: 0001_call_repository.sql  0002_call_service_repository.sql  0003_service_integrity.sql
migrations/sqlite/: 0001_call_repository.sql  0002_call_service_repository.sql  0003_service_integrity.sql
scripts/: capture-moq-managed-relay.sh  check-moq-dev-interop.sh  check-moq-upstream.sh  run-moq-browser-client.sh  test-repository-backends.sh
src/: api.rs  api_principal.rs  config.rs  context.rs  imds.rs  lib.rs  main.rs  observability.rs  providers.rs  runtime.rs  screen_pop_evidence.rs
src/api/: calls.rs
src/call_engine/: domain.rs  ids.rs  mod.rs  repository.rs
src/call_service/: idempotency.rs  mod.rs  model.rs  repository.rs  runtime.rs  service.rs  view.rs
src/persistence/: memory.rs  mod.rs  sql.rs
terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/templates/: user_data.sh.tftpl
tests/: call_service_memory.rs  call_service_repository_conformance.rs  call_service_runtime.rs  repository_conformance.rs  standardcharter_contract.rs
tests/fixtures/: standardcharter-golden.yaml  standardcharter-vapi-invite.sip
tests/moq-browser-e2e/: index.html  package-lock.json  package.json  patch-moq-dev.mjs  vite.config.ts
tests/moq-browser-e2e/src/: main.ts
tests/sipp/: README.md  bridgefu_invite.xml  bridgefu_route.xml  bridgefu_to_fallback.xml  bridgefu_unknown_tenant.xml
