[package]
name = "bridgefu"
version = "0.1.1"
edition = "2021"
description = "Deployable SIP → Amazon Connect screen-pop gateway (Vapi transfer bridge)"
license = "MIT"
publish = false

[dependencies]
# crates.io dep. The gateway crate `rvoip-amazon-connect` is independently
# versioned (alpha train, 0.1.x); it depends on the rvoip `0.2.x` beta train
# (rvoip-core / -sip / -media-core), currently the 0.2.5 beta train.
# 0.1.3 adds the per-call router hook (multi-tenant SIP-URI routing, §8.1).
rvoip-amazon-connect = { path = "../rvoip/crates/webrtc/rvoip-amazon-connect", version = "0.1.3", features = ["server", "aws-control"] }
rvoip-auth-core = { path = "../rvoip/crates/identity/auth-core", version = "0.2.5" }
rvoip-core = { path = "../rvoip/crates/foundation/rvoip-core", version = "0.2.5" }
rvoip-moq = { path = "../rvoip/crates/moq/rvoip-moq", version = "0.1.0" }
rvoip-quic = { path = "../rvoip/crates/uctp/rvoip-quic", version = "0.2.0" }
rvoip-sip = { path = "../rvoip/crates/sip/rvoip-sip", version = "0.2.5" }
rvoip-webrtc = { path = "../rvoip/crates/webrtc/rvoip-webrtc", version = "0.1.3", features = ["signaling-whip", "signaling-ws"] }

tokio = { version = "1", features = ["full"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
axum = "0.7"
tower-http = { version = "0.6", features = ["trace", "request-id"] }
serde_json = "1"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "postgres", "chrono", "uuid", "migrate", "macros"] }
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
hmac = "0.12"
jsonwebtoken = "9.3"
ring = "0.17"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sha1 = "0.10"
sha2 = "0.10"
thiserror = "1"
subtle = "2"
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
zeroize = "1"
metrics = "0.23"
metrics-exporter-prometheus = { version = "0.15", default-features = false }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }

# Cargo patches are resolved by the top-level build root, so Bridgefu repeats
# rvoip's exact reviewed rtc fork pin. This ensures container and CI builds use
# the late-DataChannel and DCEP reliability fixes rather than the unfixed alpha
# from crates.io. Do not change this revision or submit it upstream without
# project-owner review.
[patch.crates-io]
rtc = { git = "https://github.com/eisenzopf/rtc", rev = "1e5b7d4be6d94850694f2519f4c235d16c871d53" }

# bridgefu is the build root, so this profile governs the WHOLE dependency tree
# (it overrides the rvoip workspace's `lto = true, codegen-units = 1`, which are
# memory- and time-hungry across the full SIP/WebRTC/AWS tree). `thin` LTO + many
# codegen units keeps the on-instance build fast and within RAM, while opt-level 2
# is plenty for a POC gateway whose hot path is a single audio bridge.
[profile.release]
lto = "thin"
codegen-units = 16
opt-level = 2
